[package]
name = "hellcheck"
version = "0.1.2"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2018"
description = "HTTP health checker"
keywords = ["healthcheck", "http", "monitor", "notification", "health"]
license = "MIT"
repository = "https://github.com/greyblake/hellcheck"
homepage = "https://github.com/greyblake/hellcheck"
categories = ["web-programming", "network-programming"]

[dependencies]
hyper = "0.12.18"
hyper-tls = "0.3.1"
openssl-probe = "0.1.2"
tokio-timer = "0.2.8"
futures = "0.1.25"
tokio-core = "0.1.17"
humantime = "1.2.0"
yaml-rust = "0.4.2"
failure = "0.1.3"
reqwest = "0.9.5"
base64 = "0.10.0"
structopt = "0.2.14"
log = "0.4.6"
pretty_env_logger = "0.3"
